--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
         </div>
         <div class="navv">
             <ul>
-                <a href="http://127.0.0.1:5500/index.html">
+                <a href="index.html">
                     <li>home</li>
                 </a>
-                <a href="http://127.0.0.1:5500/about.html">
+                <a href="about.html">
                     <li>about</li>
                 </a>
-                <a href="http://127.0.0.1:5500/Contact.html">
+                <a href="Contact.html">
                     <li>contact</li>
                 </a>
             </ul>
@@ -64,7 +64,7 @@
         <h1>мои контакты</h1>
         <p>куда мне можно написать</p>
         <div class="btn_me">
-            <a href="http://127.0.0.1:5500/Contact.html"><b>Contact</b></a>
+            <a href="Contact.html"><b>Contact</b></a>
         </div>
     </footer>
 </body>
