--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
         </div>
         <div class="navv">
             <ul>
-                <a href="http://127.0.0.1:5500/index.html">
+                <a href="index.html">
                     <li>home</li>
                 </a>
-                <a href="http://127.0.0.1:5500/about.html">
+                <a href="about.html">
                     <li>about</li>
                 </a>
-                <a href="http://127.0.0.1:5500/Contact.html">
+                <a href="Contact.html">
                     <li>contact</li>
                 </a>
             </ul>
@@ -60,7 +60,7 @@
         <h1>мои контакты</h1>
         <p>куда мне можно написать</p>
         <div class="btn_me">
-            <a href="http://127.0.0.1:5500/Contact.html"> <b>Contact</b> </a>
+            <a href="Contact.html"> <b>Contact</b> </a>
         </div>
     </footer>
 </body>
