--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
         <div class="navv">
             <ul>
-                <a href="http://127.0.0.1:5500/index.html">
+                <a href="index.html">
                     <li>home</li>
                 </a>
-                <a href="http://127.0.0.1:5500/about.html">
+                <a href="about.html">
                     <li>about</li>
                 </a>
-                <a href="http://127.0.0.1:5500/Contact.html">
+                <a href="Contact.html">
                     <li>contact</li>
                 </a>
             </ul>
@@ -82,7 +82,7 @@
                 <h1>About Me</h1>
                 <p>обо мне</p>
                 <div class="btn_me">
-                    <a href="http://127.0.0.1:5500/about.html"> <b>About</b> </a>
+                    <a href="about.html"> <b>About</b> </a>
                 </div>
             </div>
             <div class="about_img">
@@ -94,7 +94,7 @@
         <h1>мои контакты</h1>
         <p>куда мне можно написать</p>
          <div class="btn_me"></a>
-            <a href="http://127.0.0.1:5500/Contact.html"><b>Contact</b></a>
+            <a href="Contact.html"><b>Contact</b></a>
         </div>
     </footer>
 </body>
